# realtime-vehicle-visualization

./: CMakeLists.txt  CMakePresets.json  README.md  app
include/: Camera.h  Mesh.h  Model.h  Renderer.h  Scene.h  Shader.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: Camera.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  glad.c  main.cpp
